--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a workshop",
   "main": "index.js",
   "scripts": {
-    "test": "cypress open",
+    "test": "cypress run --headless --browser chrome",
     "test:open": "cypress open"
   },
   "repository": {
