--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/Basilio9210/cypress-training-ramp-up-BSG#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.1",
     "cypress": "^12.12.0",
     "typescript": "^5.0.4"
   }
